--- a/package.json
+++ b/package.json
@@ -3,12 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reactour/tour": "^3.7.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "i18next": "^23.11.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
+    "react-google-autocomplete": "^2.7.3",
+    "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.0",
+    "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.3",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
