Worked on registration section

--- a/src/.env
+++ b/src/.env
@@ -8,6 +8,6 @@ REACT_APP_GOOGLE_MAP_API=AIzaSyABX4LTqTLQGg_b3jFOH8Z6_H5CDqn8tbc
 # REACT_APP_CLIENT=https://www.rexett.com/client-registration,
 
 
-REACT_APP_DEVELOPER=https://rexett-web.rvtechnologies.in/developer-registration
-REACT_APP_VENDOR=https://rexett-web.rvtechnologies.in/vender-registration
+REACT_APP_DEVELOPER=https://rexett-web.rvtechnologies.in/talent-registration
+REACT_APP_VENDOR=https://rexett-web.rvtechnologies.in/partner-registration
 REACT_APP_CLIENT=https://rexett-web.rvtechnologies.in/client-registration
