--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# REACT_APP_BASE_URL=https://backend.rexett.com
-REACT_APP_BASE_URL=https://rexett-backend.rvtechnologies.info
+REACT_APP_BASE_URL=https://backend.rexett.com
+# REACT_APP_BASE_URL=https://rexett-backend.rvtechnologies.info
 # REACT_APP_GOOGLE_MAP_API=AIzaSyDgBFSJ1vRaU0QwJ206OSQiJFrD4aAzkXo
 REACT_APP_GOOGLE_MAP_API=AIzaSyABX4LTqTLQGg_b3jFOH8Z6_H5CDqn8tbc
 
